--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="work">Photography</a></li>
-						<!-- <li><a href="#" data-nav-section="blog">Blog</a></li> -->
+						<li><a href="#" data-nav-section="blog">Dreams</a></li>
 						<!-- <li><a href="#" data-nav-section="contact">Contact</a></li> -->
 					</ul>
 				</div>
@@ -343,7 +343,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
+								    <span>50%</span>
 								  	</div>
 								</div>
 							</div>
@@ -354,7 +354,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>80%</span>
+								    <span>45%</span>
 								  	</div>
 								</div>
 							</div>
@@ -365,7 +365,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
+								    <span>48%</span>
 								  	</div>
 								</div>
 							</div>
@@ -376,7 +376,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								    <span>75%</span>
+								    <span>40%</span>
 								  	</div>
 								</div>
 							</div>
@@ -387,7 +387,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
+								    <span>48%</span>
 								  	</div>
 								</div>
 							</div>
@@ -398,7 +398,7 @@
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
+								    <span>50%</span>
 								  	</div>
 								</div>
 							</div>
@@ -742,53 +742,53 @@
 				</div>
 			</section>
 
-			<!-- <section class="colorlib-blog" data-section="blog">
+			<section class="colorlib-blog" data-section="blog">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Read</span>
-							<h2 class="colorlib-heading">Recent Blog</h2>
+							<span class="heading-meta">Dreams</span>
+							<h2 class="colorlib-heading">Aspirations</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/skydiving.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Renovating National Gallery</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<!-- <span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span> -->
+									<h3>Sky Diving</h3>
+									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/fullstack.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<!-- <span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span> -->
+									<h3>Full Stack Developer</h3>
+									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/ownhouse.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<!-- <span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span> -->
+									<h3>Dream House</h3>
+									<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
-			</section> -->
+			</section>
 
 			<!-- <section class="colorlib-contact" data-section="contact">
 				<div class="colorlib-narrow-content">
