--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Innovative Ideas</h3>
+									<h3 style="color: white;">Innovative Ideas</h3>
 									<p>I love putting the existing things in a new way and making it workout</p>
 								</div>
 							</div>
@@ -225,7 +225,7 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
+									<h3 style="color: white;">Software</h3>
 									<p>The zeal of learning new technologies is always there and My motto is to just Relentlessly improve.</p>
 								</div>
 							</div>
@@ -236,7 +236,7 @@
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
+									<h3 style="color: white;">Application</h3>
 									<p>Have some thing in mind, just starting working on it and make it.</p>
 								</div>
 							</div>
