--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<li><a href="#" data-nav-section="skills">Skills</a></li>
 							<li><a href="#" data-nav-section="experience">Experience</a></li>
 							<li><a href="#" data-nav-section="blog">Dreams</a></li>
-							<li><a href="#" data-nav-section="work">Photography</a></li>
+							<li><a href="#" data-nav-section="work">Hobbies</a></li>
 
 							<!-- <li><a href="#" data-nav-section="contact">Contact</a></li> -->
 						</ul>
@@ -131,7 +131,7 @@
 								<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 									<div class="col-md-12">
 										<div class="about-desc">
-											<span class="heading-meta">About Us</span>
+											<span class="heading-meta">About Me</span>
 											<h2 class="colorlib-heading">Who Am I?</h2>
 											<p><strong>Hi I'm Duvvuri Venkata Raghuvir</strong>I have a very supportive
 												family and a very hard-working father,an ex-servicemen in Navy.He
