--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@
 										</div>
 									</div>
 								</div>
+								
 								<div class="row">
-									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-										<div class="project" style="background-image: url(images/beach.jpg);">
+									<div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
+										<div class="project" style="background-image: url(images/vizagcity.jpeg);">
 											<!-- <div class="desc">
 													<div class="con">
 														<h3><a href="work.html">Work 01</a></h3>
@@ -181,7 +182,7 @@
 										</div>
 									</div>
 
-									<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+									<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
 										<div class="project" style="background-image: url(images/lucky.jpeg);">
 											<!-- <div class="desc">
 														<div class="con">
@@ -197,7 +198,24 @@
 										</div>
 									</div>
 								</div>
-
+								<div class="row">
+									<div class="col-md-12 animate-box" data-animate-effect="fadeInRight">
+										<div class="project"
+											style="background-image: url(images/beach.jpg);height:450px;">
+											<!-- <div class="desc">
+													<div class="con">
+														<h3><a href="work.html">Work 02</a></h3>
+														<span>Animation</span>
+														<p class="icon">
+															<span><a href="#"><i class="icon-share3"></i></a></span>
+															<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+															<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+														</p>
+													</div>
+												</div> -->
+										</div>
+									</div>
+								</div>
 								<!-- <div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
@@ -247,7 +265,7 @@
 											<div class="panel-heading" role="tab" id="headingTwo">
 												<h4 class="panel-title">
 													<a class="collapsed" data-toggle="collapse" data-parent="#accordion"
-														href="#collapseTwo" aria-expanded="false"
+														href="#collapseTwo" aria-expanded="true"
 														aria-controls="collapseTwo">Bachelor Degree of Computer Science
 													</a>
 												</h4>
@@ -284,7 +302,7 @@
 											<div class="panel-heading" role="tab" id="headingFour">
 												<h4 class="panel-title">
 													<a class="collapsed" data-toggle="collapse" data-parent="#accordion"
-														href="#collapseFour" aria-expanded="false"
+														href="#collapseFour" aria-expanded="true"
 														aria-controls="collapseFour">Intermediate in MPC
 													</a>
 												</h4>
@@ -303,7 +321,7 @@
 											<div class="panel-heading" role="tab" id="headingFive">
 												<h4 class="panel-title">
 													<a class="collapsed" data-toggle="collapse" data-parent="#accordion"
-														href="#collapseFive" aria-expanded="false"
+														href="#collapseFive" aria-expanded="true"
 														aria-controls="collapseFive">High School Secondary Education
 													</a>
 												</h4>
